Added documentation for module Locomocion
