# Modules/Locomocion/Entities/Locomocion.php
@@ -1,0 +1,101 @@
+<?php
+
+namespace Modules\Locomocion\Entities;
+
+use Eloquent as Model;
+
+/**
+ * @SWG\Definition(
+ *      definition="Locomocion",
+ *      required={"code", "nombre", "descripcion", "active", "negocio_id"},
+ *      @SWG\Property(
+ *          property="id",
+ *          description="id",
+ *          type="integer",
+ *          format="int32"
+ *      ),
+ *      @SWG\Property(
+ *          property="code",
+ *          description="code",
+ *          type="string"
+ *      ),
+ *      @SWG\Property(
+ *          property="nombre",
+ *          description="nombre",
+ *          type="string"
+ *      ),
+ *      @SWG\Property(
+ *          property="descripcion",
+ *          description="descripcion",
+ *          type="string"
+ *      ),
+ *      @SWG\Property(
+ *          property="active",
+ *          description="active",
+ *          type="boolean"
+ *      ),
+ *      @SWG\Property(
+ *          property="negocio_id",
+ *          description="negocio_id",
+ *          type="integer",
+ *          format="int32"
+ *      ),
+ *      @SWG\Property(
+ *          property="created_at",
+ *          description="created_at",
+ *          type="string",
+ *          format="date-time"
+ *      ),
+ *      @SWG\Property(
+ *          property="updated_at",
+ *          description="updated_at",
+ *          type="string",
+ *          format="date-time"
+ *      )
+ * )
+ */
+class Locomocion extends Model
+{
+
+    public $table = 'locomocions';
+    
+
+
+
+    public $fillable = [
+        'code',
+        'nombre',
+        'descripcion',
+        'active',
+        'negocio_id'
+    ];
+
+    /**
+     * The attributes that should be casted to native types.
+     *
+     * @var array
+     */
+    protected $casts = [
+        'id' => 'integer',
+        'code' => 'string',
+        'nombre' => 'string',
+        'descripcion' => 'string',
+        'active' => 'boolean',
+        'negocio_id' => 'integer'
+    ];
+
+    /**
+     * Validation rules
+     *
+     * @var array
+     */
+    public static $rules = [
+        'code' => 'required',
+        'nombre' => 'required',
+        'descripcion' => 'required',
+        'active' => 'required',
+        'negocio_id' => 'required'
+    ];
+
+    
+}
